5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2502.log
== TEST (2019-05-13 19:34:08) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:11) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:31) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:34) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:52) 
-- CODE:
n=float(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:37:58) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
while(1<n):
	soma=soma*(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma*(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:39:31) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=1
while(1<n):
	soma=soma+(-1)**i/(2*i+1)*3**i
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=soma+(-1)**i/(2*i+1)*3**i
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:47:08) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
soma=0
while(0<n):
	soma=soma+(12**1/2*((-1)**i/(2*i+1)*3**i)
	i=i+1
	
print(round(soma,8))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:47:47) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
soma=0
while(0<n):
	soma=soma+(12**1/2*((-1)**i/(2*i+1)*3**i))
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+(12**1/2*((-1)**i/(2*i+1)*3**i))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:48:07) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
soma=0
while(0<n):
	soma=soma+(12**1/2*((-1)**i/(2*i+1)*3**i))
	i=i+1
	
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma=soma+(12**1/2*((-1)**i/(2*i+1)*3**i))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:50:47) 
-- CODE:
n=int(input("numero de repeticoes: "))
soma=12**1/2
i=0
soma=0
while(0<n):
	soma=soma+((12**1/2)*(1/(2*i+1)*3**i))*(-1)**i
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
12341.87893221
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:51:21) 
-- CODE:
n=int(input("numero de repeticoes: "))

i=0
soma=0
while(0<n):
	soma=soma+((12**1/2)*(1/(2*i+1)*3**i))*(-1)**i
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
12341.87893221
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:53:25) 
-- CODE:
n=int(input("numero de repeticoes: "))

i=0
soma=0
while(0<n):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i)))*((-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:54:51) 
-- CODE:
n=int(input("numero de repeticoes: "))

i=0
soma=0
while(0<n):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:55:21) 
-- CODE:
n=int(input("numero de repeticoes: "))

i=0
soma=0
while(0<n):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:56:21) 
-- CODE:
n=int(input("numero de repeticoes: "))

i=0
soma=0
while(0<n):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	n=n-1
	
	
print(round(soma,8))
-- EXECUTION TIME:
0.207712
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:31:04) 
-- CODE:
from math import*
k=int(input("digite um numero: ")
soma=(12)**1/2
i=0
while(i<k):
	soma=soma+(1/((2*i+1)*3**i)*(-1)**i)
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=(12)**1/2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:31:27) 
-- CODE:
from math import*
k=int(input("digite um numero: ")
soma=sqrt(12)
i=0
while(i<k):
	soma=soma+(1/((2*i+1)*3**i)*(-1)**i)
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=sqrt(12)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:38:41) 
-- CODE:
from math import*
k=int(input("digite um numero: ")
soma=0
i=0
while(i<k):
	soma=soma+12**1/2*(1/((2*i+1)*3**i)*(-1)**i)
	i=i+1
	n=n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:41:12) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(0<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	n=n-1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    n=n-1
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:41:32) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(0<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	k=k-1
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:41:43) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(0<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	k=k-1
print(round(soma,8))
-- EXECUTION TIME:
0.196887
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:49:13) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(i<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:49:24) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(i<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	
print(round(soma,8))
-- EXECUTION TIME:
0.217165
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:49:32) 
-- CODE:

k=int(input("digite um numero: "))
		
soma=0
i=0
while(i<k):
	soma=soma+(12**(1/2))*((1/((2*i+1)*(3**i))))*((-1)**i)
	i=i+1
	
print(round(soma,8))
-- EXECUTION TIME:
0.198293
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
